# api-playroom

./: Cargo.toml  Dockerfile  README.md
migrations/: 20231008101410_initial_database_setup.sql
src/: database.rs  main.rs
src/handlers/: leagues_handler.rs  matches_handler.rs  mod.rs  participants_handler.rs  users_handler.rs
src/models/: league.rs  matches.rs  mod.rs  participant.rs  user.rs
